--- a/projects.html
+++ b/projects.html
@@ -50,13 +50,13 @@
                     <div class="collapse navbar-collapse ml-auto" id="collapsibleNavId">
                         <ul class="navbar-nav ms-auto mt-2 mt-lg-0 text-end">
                             <li class="nav-item">
-                                <a class="nav-link active" href="#" aria-current="page">Home <span class="visually-hidden">(current)</span></a>
+                                <a class="nav-link active" href="index.html" >Home </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="about.html">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="projects.html">Projects</a>
+                                <a class="nav-link" href="projects.html" aria-current="page">Projects <span class="visually-hidden">(current)</span></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Blog</a>
@@ -177,7 +177,7 @@
 
 
             <!-- News section -->
-            <section class="news pt-4 pb-4">
+            <!-- <section class="news pt-4 pb-4">
                 <div class="container">
                     <h5 class="section-title text-center"> News </h5>
                     <h5 class="sub-sections-header pb-2"> Recent Causes </h5>
@@ -222,7 +222,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
 
         <div class="partners pt-4 pb-4 mb-3">
