--- a/projects.html
+++ b/projects.html
@@ -97,7 +97,7 @@
                             <span>
                                 We work on different projects to empower individuals and communities to take control of their own futures and create sustainable change that benefits everyone.
                                 <br>
-                                <b>Let's build our country together.</b>
+                                <b class="emp">Let's build our country together.</b>
                             </span>
                             <br>
                             <br>
