--- a/projects.html
+++ b/projects.html
@@ -143,11 +143,15 @@
                                     <i class="bi bi-compass"></i> &nbsp; <b> Sehemu za utekelezaji </b><br>
                                     Lindi Manispaa na Halmashauri ya Mtama <br>
                                 </p>
+                                <button class="btn btn-outline-success" id="donate-btn">
+                                    Donate
+                                </button>
                             </div>
 
                             <div class="col-md-4">
                                 <i class="bi bi-bounding-box how-icons"></i>
                                 <h5 class="sub-sections-header">#2 Mradi wa Jinsia</h5>
+                                <hr>
                                 <p>
                                     <i class="bi bi-coin"></i> &nbsp; <b> Mfadhili </b><br>
                                     Swissaid Tanzania.<br>
@@ -156,6 +160,9 @@
                                     <i class="bi bi-compass"></i> &nbsp; <b> Sehemu za utekelezaji</b><br>
                                     Lindi Manispaa na Halmashauri ya Mtama <br>
                                 </p>
+                                <button class="btn btn-outline-success" id="donate-btn">
+                                    Donate
+                                </button>
                             </div>
 
                             <div class="col-md-4">
@@ -169,6 +176,9 @@
                                     <i class="bi bi-compass"></i> &nbsp; <b> Sehemu za utekelezaji </b><br>
                                     Lindi Manispaa na Halmashauri ya Mtama <br>
                                 </p>
+                                <button class="btn btn-outline-success" id="donate-btn">
+                                    Donate
+                                </button>
                             </div>
                         </div>
                     </p>
