--- a/projects.html
+++ b/projects.html
@@ -132,7 +132,7 @@
                     <h5 class="section-title text-center">Ongoing Projects</h5>
                     <p>
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-md-4 pb-3">
                                 <i class="bi bi-heart how-icons"></i>
                                 <h5 class="sub-sections-header">#1 Mradi wa Jinsia</h5>
                                 <hr>
@@ -149,7 +149,7 @@
                                 </button>
                             </div>
 
-                            <div class="col-md-4">
+                            <div class="col-md-4 pb-3">
                                 <i class="bi bi-bounding-box how-icons"></i>
                                 <h5 class="sub-sections-header">#2 Mradi wa Jinsia</h5>
                                 <hr>
@@ -166,7 +166,7 @@
                                 </button>
                             </div>
 
-                            <div class="col-md-4">
+                            <div class="col-md-4 pb-3">
                                 <i class="bi bi-bounding-box-circles how-icons"></i>
                                 <h5 class="sub-sections-header">#3 Mradi wa Jinsia</h5>
                                 <hr>
@@ -222,6 +222,7 @@
                     <div class="col-md-8">
                         <h5>Address</h5>
                         <p>
+                            <i class="bi"></i>
                             Rondo Women's Development Organization <br>
                             <b>Ntauna Village -Lindi Rural</b> <br>
                             Lindi Region<br>
