page title - contact

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <meta name="theme-color" content="#ffffff">
 
         <title>
-            About Us | Rondo Women's Development Organization (ROWODO)
+            Contact Us | Rondo Women's Development Organization (ROWODO)
         </title>
 
         <!-- Bootstrap CSS CDN -->
