--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
                         <h4 class="section-title">Rondo Women's Development Organization</h4>
                         <span class="page-subtitle" id="small-title">
                             <i class="bi bi-info-circle-fill"></i>
-                            &nbsp;> &nbsp;About
+                            &nbsp;> &nbsp;Contact
                         </span>
                     </div>
                 </div>
