--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
                     <div class="page-top pb-3">
                         <h4 class="section-title">Rondo Women's Development Organization</h4>
                         <span class="page-subtitle" id="small-title">
-                            <i class="bi bi-info-envelope-fill"></i>
+                            <i class="bi bi-envelope-fill"></i>
                             &nbsp;> &nbsp;Contact
                         </span>
                     </div>
