--- a/contact.html
+++ b/contact.html
@@ -89,13 +89,13 @@
             </section>
 
             <!-- page contents -->
-            <section class="top-part pt-3 pb-4">
+            <!-- <section class="top-part pt-3 pb-4">
 
                 <div class="container">
                     <div class="row">
                         <p>
                             <div class="">
-                                <h5 class="section-title">ROWODO in a Glance</h5>
+                                <h5 class="section-title">Contact Us</h5>
                                 <span>
                                     ROWODO is Non Governmental Organization with total of 12 women members is Ntauna Villages in
                                     Lindi Rural District as its head office though is having another branch office in Lindi Municipal.
@@ -123,23 +123,23 @@
                                 <img src="./res/images/imgs/community-education.png" alt="" id="women-image" class="rounded img-fluid">
                             </div>
                         </p>
-                    </div>
+                    </div> -->
 
                     <!-- <button class="btn btn-outline-success" id="donate-btn">
                         Donate
                     </button> -->
-                </div>
-            </section>
+                <!-- </div>
+            </section> -->
 
 
             <section class="top-part pt-4 pb-4">
                 <div class="container">
-                    <h5 class="section-title text-center">Our Values</h5>
+                    <h5 class="section-title text-center">Contact Us</h5>
                     <p>
                         <div class="row">
                             <div class="col-md-4">
-                                <i class="bi bi-eye-fill value-icons"></i>
-                                <h5 class="sub-sections-header">Our Vision</h5>
+                                <i class="bi bi-house-fill value-icons"></i>
+                                <h5 class="sub-sections-header">Address</h5>
                                 <p>
                                     Having society with a good prosperity and equal rights for all social classes as well as poverty reduction.
                                 </p>
