--- a/contact.html
+++ b/contact.html
@@ -141,7 +141,26 @@
                                 <i class="bi bi-house-fill value-icons"></i>
                                 <h5 class="sub-sections-header">Address</h5>
                                 <p>
-                                    Having society with a good prosperity and equal rights for all social classes as well as poverty reduction.
+                                    <address>
+                                        <p>
+                                            <strong>ROWODO - Non Governmental Organization</strong><br>
+                                            Ntauna Village - Lindi Rural <br>
+                                            Lindi - Tanzania <br>
+                                        </p>
+                                        <p>
+                                            <a href="tel:+255 719 807 206 ">
+                                                <i class="bi bi-telephone-fill"></i> +255 719 807 206 
+                                            </a>
+                                        </p>
+                                            <a href="tel:+255 787 428 630">
+                                                <i class="bi bi-telephone-fill"></i> &nbsp;+255 787 428 630
+                                            </a>
+
+                                        </p>
+
+
+                                    </address>
+                                    
                                 </p>
                             </div>
 
