--- a/contact.html
+++ b/contact.html
@@ -135,7 +135,7 @@
             <section class="top-part pt-4 pb-4">
                 <div class="container">
                     <h5 class="section-title text-center">Contact Us</h5>
-                    <p>
+                    <div class="">
                         <div class="row">
                             <div class="col-md-4">
                                 <i class="bi bi-house-fill value-icons"></i>
@@ -149,7 +149,7 @@
                                         </p>
                                         <p>
                                             <a href="tel:+255 719 807 206 ">
-                                                <i class="bi bi-telephone-fill"></i> +255 719 807 206 
+                                                <i class="bi bi-telephone-fill"></i>&nbsp;+255 719 807 206 
                                             </a>
                                         </p>
                                             <a href="tel:+255 787 428 630">
