--- a/contact.html
+++ b/contact.html
@@ -148,12 +148,12 @@
                                             Lindi - Tanzania <br>
                                         </p>
                                         <p>
-                                            <a href="tel:+255 719 807 206 ">
+                                            <a href="tel:+255 719 807 206" style="text-decoration: none;">
                                                 <i class="bi bi-telephone-fill"></i>&nbsp;+255 719 807 206 
                                             </a>
                                         </p>
-                                            <a href="tel:+255 787 428 630">
-                                                <i class="bi bi-telephone-fill"></i> &nbsp;+255 787 428 630
+                                            <a href="tel:+255 787 428 630" style="text-decoration: none;">
+                                                <i class="bi bi-telephone-fill"></i>&nbsp;+255 787 428 630
                                             </a>
 
                                         </p>
