input name and email

--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
                     <h5 class="section-title text-center">Contact Us</h5>
                     <div class="">
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-md-6">
                                 <i class="bi bi-house-fill value-icons"></i>
                                 <h5 class="sub-sections-header">Address</h5>
                                 <p>
@@ -163,6 +163,20 @@
                                     
                                 </p>
                             </div>
+                            <div class="col-md-6">
+                                <i class="bi bi-house-fill value-icons"></i>
+                                <h5 class="sub-sections-header">Send us a message</h5>
+                                <div class="mb-3">
+                                    <label for="name" class="form-label">Name</label>
+                                    <input type="text" class="form-control" name="name" id="name-input" aria-describedby="nameeHelpId" placeholder="abc@mail.com">
+                                    <small id="emailHelpId" class="form-text text-muted">Input your name</small>
+                                  </div>
+                                <div class="mb-3">
+                                  <label for="" class="form-label">Email</label>
+                                  <input type="email" class="form-control" name="" id="" aria-describedby="emailHelpId" placeholder="abc@mail.com">
+                                  <small id="emailHelpId" class="form-text text-muted">Help text</small>
+                                </div>
+                            </div>
 
                             <div class="col-md-8">
                                 <i class="bi bi-rocket value-icons"></i>
@@ -172,14 +186,6 @@
                                 </p>
                             </div>
 
-
-                            <!-- <div class="col-md-4">
-                                <i class="bi bi-balloon-heart-fill how-icons"></i>
-                                <h5 class="sub-sections-header">Give Scholarship</h5>
-                                <p>
-                                    Your gift will help equip children in need with necessary resources, training and education while offering the promise of a brighter future. You can make a difference today by signing up.
-                                </p>
-                            </div> -->
                         </div>
                     </p>
                 </div>
@@ -187,7 +193,7 @@
 
 
             <!-- News section -->
-            <section class="news pt-4 pb-4">
+            <!-- <section class="news pt-4 pb-4">
                 <div class="container">
                     <h5 class="section-title text-center"> Achievements </h5>
                     <h5 class="sub-sections-header pb-2"> Remarkable ROWODO Achievements </h5>
@@ -215,7 +221,7 @@
                         </ul>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
 
         <div class="partners pt-4 pb-4 mb-3">
