--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
                     <h5 class="section-title text-center">Contact Us</h5>
                     <div class="">
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-5">
                                 <i class="bi bi-house-fill value-icons"></i>
                                 <h5 class="sub-sections-header">Address</h5>
                                 <p>
@@ -163,18 +163,18 @@
                                     
                                 </p>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-7">
                                 <i class="bi bi-house-fill value-icons"></i>
                                 <h5 class="sub-sections-header">Send us a message</h5>
                                 <div class="mb-3">
                                     <label for="name" class="form-label">Name</label>
                                     <input type="text" class="form-control" name="name" id="name-input" aria-describedby="nameeHelpId" placeholder="abc@mail.com">
-                                    <small id="emailHelpId" class="form-text text-muted">Input your name</small>
+                                    <!-- <small id="emailHelpId" class="form-text text-muted">Input your name</small> -->
                                   </div>
                                 <div class="mb-3">
                                   <label for="" class="form-label">Email</label>
                                   <input type="email" class="form-control" name="" id="" aria-describedby="emailHelpId" placeholder="abc@mail.com">
-                                  <small id="emailHelpId" class="form-text text-muted">Help text</small>
+                                  <!-- <small id="emailHelpId" class="form-text text-muted">Help text</small> -->
                                 </div>
                             </div>
 
