contact half ready

--- a/contact.html
+++ b/contact.html
@@ -178,19 +178,20 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-8">
+                            <!-- <div class="col-md-8">
                                 <i class="bi bi-rocket value-icons"></i>
                                 <h5 class="sub-sections-header">Our Mission</h5>
                                 <p>
                                     To develop and enhance society economically, to advocate rights of youth, children  and women group:  such as provision of legal aids, reproductive health education to youth in school, HIV/AIDS education, environmental conservation, Human rights and Nutrition.
                                 </p>
-                            </div>
+                            </div> -->
 
                         </div>
                     </p>
                 </div>
             </section>
 
+            <hr>
 
             <!-- News section -->
             <!-- <section class="news pt-4 pb-4">
