--- a/contact.html
+++ b/contact.html
@@ -191,7 +191,7 @@
                 </div>
             </section>
 
-            <hr>
+            <hr class="container">
 
             <!-- News section -->
             <!-- <section class="news pt-4 pb-4">
