--- a/contact.html
+++ b/contact.html
@@ -164,18 +164,20 @@
                                 </p>
                             </div>
                             <div class="col-md-7">
-                                <i class="bi bi-house-fill value-icons"></i>
+                                <i class="bi bi-send-fill value-icons"></i>
                                 <h5 class="sub-sections-header">Send us a message</h5>
-                                <div class="mb-3">
-                                    <label for="name" class="form-label">Name</label>
-                                    <input type="text" class="form-control" name="name" id="name-input" aria-describedby="nameeHelpId" placeholder="abc@mail.com">
-                                    <!-- <small id="emailHelpId" class="form-text text-muted">Input your name</small> -->
-                                  </div>
-                                <div class="mb-3">
-                                  <label for="" class="form-label">Email</label>
-                                  <input type="email" class="form-control" name="" id="" aria-describedby="emailHelpId" placeholder="abc@mail.com">
-                                  <!-- <small id="emailHelpId" class="form-text text-muted">Help text</small> -->
-                                </div>
+                                <p>
+                                    <div class="mb-3">
+                                        <label for="name" class="form-label">Name</label>
+                                        <input type="text" class="form-control" name="name" id="name-input" aria-describedby="nameeHelpId" placeholder="abc@mail.com">
+                                        <!-- <small id="emailHelpId" class="form-text text-muted">Input your name</small> -->
+                                    </div>
+                                    <div class="mb-3">
+                                    <label for="" class="form-label">Email</label>
+                                    <input type="email" class="form-control" name="" id="" aria-describedby="emailHelpId" placeholder="abc@mail.com">
+                                    <!-- <small id="emailHelpId" class="form-text text-muted">Help text</small> -->
+                                    </div>
+                                </p>
                             </div>
 
                             <!-- <div class="col-md-8">
