section start - footer

--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
         </header>
+        
         <body>
             <nav class="navbar navbar-expand-sm sticky-top">
                 <div class="container">
@@ -140,37 +141,7 @@
 
             <hr class="container">
 
-            <!-- News section -->
-            <!-- <section class="news pt-4 pb-4">
-                <div class="container">
-                    <h5 class="section-title text-center"> Achievements </h5>
-                    <h5 class="sub-sections-header pb-2"> Remarkable ROWODO Achievements </h5>
-                    <div class="">
-                        <ul class="container">
-                            <li>
-                                The organization has participated in commemoration of World Breast
-                                Feeding week sponsored by Save the Children International in Lindi and
-                                Ruangwa districts in 2015 national campaign.
-                            </li>
-                            <li>
-                                Cooperating with partners including government and other NGOs in various events.
-                            </li>
-                            <li>
-                                Organization has successes in mobilizing communities on environment
-                                conservation and friendly farming system.
-                            </li>
-                            <li>
-                                Participated in mobilizing in “Binti Lindi campaign” with the purpose of
-                                influencing and motivating girls to put efforts in studies.
-                            </li>
-                            <li>
-                                Have mobilized community on HIV AIDS education.
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </section> -->
-
+        <!-- Partners section -->
 
         <div class="partners pt-4 pb-4 mb-3">
             <div class="container">
@@ -197,9 +168,8 @@
             </div>
         </div>
         </section>
-        
-        </main>
 
+        <!-- Footer -->
         <footer>
             <div class="container pt-5">
                 <div class="row">
