--- a/contact.html
+++ b/contact.html
@@ -167,7 +167,10 @@
                 </div>
             </div>
         </div>
-        </section>
+        </div>
+    </section>
+
+    </main>
 
         <!-- Footer -->
         <footer>
