--- a/contact.html
+++ b/contact.html
@@ -124,13 +124,17 @@
                                 <p>
                                     <div class="mb-3">
                                         <label for="name" class="form-label">Name</label>
-                                        <input type="text" class="form-control" name="name" id="name-input" aria-describedby="nameeHelpId" placeholder="abc@mail.com">
+                                        <input type="text" class="form-control" name="name" id="name-input" aria-describedby="nameHelpId" placeholder="abc@mail.com">
                                         <!-- <small id="emailHelpId" class="form-text text-muted">Input your name</small> -->
                                     </div>
                                     <div class="mb-3">
                                         <label for="" class="form-label">Email</label>
-                                        <input type="email" class="form-control" name="" id="" aria-describedby="emailHelpId" placeholder="abc@mail.com">
+                                        <input type="email" class="form-control" name="email" id="email-input" aria-describedby="emailHelpId" placeholder="abc@mail.com">
                                         <!-- <small id="emailHelpId" class="form-text text-muted">Help text</small> -->
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="" class="form-label">Message</label>
+                                        <input type="text" class="form-control" name="message" id="message-input" placeholder="Write your message">
                                     </div>
                                 </p>
                             </div>
