--- a/contact.html
+++ b/contact.html
@@ -145,8 +145,7 @@
 
             <hr class="container">
 
-        <!-- Partners section -->
-
+        <!-- Partners -->
         <div class="partners pt-4 pb-4 mb-3">
             <div class="container">
                 <h5 class="section-title text-center">Our Partners</h5>
