--- a/about.html
+++ b/about.html
@@ -5,8 +5,6 @@
         <meta charset="UTF-8">
 
         <!-- favicon -->
-
-
         <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
@@ -198,7 +196,7 @@
                 </div>
             </section>
 
-
+        <!-- Partners -->
         <div class="partners pt-4 pb-4 mb-3">
             <div class="container">
                 <h5 class="section-title text-center">Our Partners</h5>
