--- a/projects.html
+++ b/projects.html
@@ -187,7 +187,7 @@
                 </div>
             </section>
 
-
+        <!-- Partners -->
         <div class="partners pt-4 pb-4 mb-3">
             <div class="container">
                 <h5 class="section-title text-center">Our Partners</h5>
