--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 
             <!-- News section -->
-            <section class="news pt-4 pb-4">
+            <!-- <section class="news pt-4 pb-4">
                 <div class="container">
                     <h5 class="section-title text-center"> News </h5>
                     <h5 class="sub-sections-header pb-2"> Recent Causes </h5>
@@ -197,7 +197,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!-- Partners -->
         <div class="partners pt-4 pb-4 mb-3">
