--- a/about.html
+++ b/about.html
@@ -165,7 +165,7 @@
             </section>
 
 
-            <!-- News section -->
+            <!-- Achievements section -->
             <section class="news pt-4 pb-4">
                 <div class="container">
                     <h5 class="section-title text-center"> Achievements </h5>
