--- a/contact.html
+++ b/contact.html
@@ -121,21 +121,29 @@
                             <div class="col-md-7">
                                 <i class="bi bi-send-fill value-icons"></i>
                                 <h5 class="sub-sections-header">Send us a message</h5>
+
                                 <p>
+                                    <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                                     <div class="mb-3">
                                         <label for="name" class="form-label">Name</label>
-                                        <input type="text" class="form-control" name="name" id="name-input" aria-describedby="nameHelpId" placeholder="abc@mail.com">
+                                        <input type="text" class="form-control" name="name" id="name-input" aria-describedby="nameHelpId" placeholder="abc@mail.com" required>
                                         <!-- <small id="emailHelpId" class="form-text text-muted">Input your name</small> -->
                                     </div>
                                     <div class="mb-3">
                                         <label for="" class="form-label">Email</label>
-                                        <input type="email" class="form-control" name="email" id="email-input" aria-describedby="emailHelpId" placeholder="abc@mail.com">
+                                        <input type="email" class="form-control" name="email" id="email-input" aria-describedby="emailHelpId" placeholder="abc@mail.com" required>
                                         <!-- <small id="emailHelpId" class="form-text text-muted">Help text</small> -->
+                                    </div>
+                                    <div class="form-group mt-3">
+                                        <label for="name">Subject</label>
+                                        <input type="text" class="form-control" name="subject" id="subject" required>
                                     </div>
                                     <div class="mb-3">
                                         <label for="" class="form-label">Message</label>
-                                        <input type="text" class="form-control" name="message" id="message-input" placeholder="Write your message">
+                                        <textarea class="form-control" name="message" id="message-input" placeholder="Write your message" rows="10"></textarea>
                                     </div>
+                                    <div class="text-start mt-3"><button type="submit" class="btn" id="sendBtn">Send Message</button></div>
+                                    </form>
                                 </p>
                             </div>
                         </div>
