--- a/contact.html
+++ b/contact.html
@@ -106,11 +106,11 @@
                                             Lindi - Tanzania <br>
                                         </p>
                                         <p>
-                                            <a href="tel:+255 719 807 206" style="text-decoration: none;">
+                                            <a href="tel:+255719807206" style="text-decoration: none;">
                                                 <i class="bi bi-telephone-fill"></i>&nbsp;+255 719 807 206 
                                             </a>
                                         </p>
-                                            <a href="tel:+255 787 428 630" style="text-decoration: none;">
+                                            <a href="tel:+255787428630" style="text-decoration: none;">
                                                 <i class="bi bi-telephone-fill"></i>&nbsp;+255 787 428 630
                                             </a>
                                         </p>
