--- a/projects.html
+++ b/projects.html
@@ -58,12 +58,12 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="projects.html" aria-current="page">Projects <span class="visually-hidden">(current)</span></a>
                             </li>
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a class="nav-link" href="#">Blog</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">News</a>
-                            </li>
+                            </li> -->
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Contact</a>
                             </li>
@@ -140,7 +140,7 @@
                                 <i class="bi bi-coin"></i> &nbsp; <b> Mfadhili </b><br>
                                 Swissaid Tanzania.<br>
                             </p>
-                            <p>    
+                            <p>
                                 <i class="bi bi-compass"></i> &nbsp; <b> Sehemu za utekelezaji </b><br>
                                 Lindi Manispaa na Halmashauri ya Mtama <br>
                             </p>
