--- a/about.html
+++ b/about.html
@@ -58,12 +58,12 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="projects.html">Projects</a>
                             </li>
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a class="nav-link" href="#">Blog</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">News</a>
-                            </li>
+                            </li> -->
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Contact</a>
                             </li>
