--- a/contact.html
+++ b/contact.html
@@ -61,12 +61,12 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="projects.html">Projects</a>
                             </li>
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a class="nav-link" href="#">Blog</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">News</a>
-                            </li>
+                            </li> -->
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html" aria-current="page">Contact<span class="visually-hidden">(current)</span></a>
                             </li>
