--- a/contact.html
+++ b/contact.html
@@ -124,17 +124,17 @@
 
                                 <p>
                                     <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-                                    <div class="mb-3">
+                                    <div class="form-group mb-3">
                                         <label for="name" class="form-label">Name</label>
                                         <input type="text" class="form-control" name="name" id="name-input" aria-describedby="nameHelpId" placeholder="abc@mail.com" required>
                                         <!-- <small id="emailHelpId" class="form-text text-muted">Input your name</small> -->
                                     </div>
-                                    <div class="mb-3">
+                                    <div class="form-group mb-3">
                                         <label for="" class="form-label">Email</label>
                                         <input type="email" class="form-control" name="email" id="email-input" aria-describedby="emailHelpId" placeholder="abc@mail.com" required>
                                         <!-- <small id="emailHelpId" class="form-text text-muted">Help text</small> -->
                                     </div>
-                                    <div class="form-group mt-3">
+                                    <div class="form-group mb-3">
                                         <label for="name">Subject</label>
                                         <input type="text" class="form-control" name="subject" id="subject" required>
                                     </div>
