--- a/contact.html
+++ b/contact.html
@@ -136,7 +136,7 @@
                                         </div>
                                         <div class="form-group mb-3">
                                             <label for="subject">Subject</label>
-                                            <input type="text" class="form-control" name="subject" id="subject" required>
+                                            <input type="text" class="form-control" name="subject" id="subject" placeholder="Message subject" required>
                                         </div>
                                         <div class="form-group mb-3">
                                             <label for="message" class="form-label">Message</label>
