--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
                             <div class="">
                                 <h5 class="section-title">ROWODO in a Glance</h5>
                                 <span>
-                                    ROWODO is Non Governmental Organization with total of 12 women members is Ntauna Villages in
+                                    <!-- ROWODO is Non Governmental Organization with total of 12 women members is Ntauna Villages in
                                     Lindi Rural District as its head office though is having another branch office in Lindi Municipal.
                                     ROWODO was started in 2011 by 1 grassroots group that was involved mainly in small farming and
                                     environmental conservation.
@@ -107,6 +107,38 @@
                                     <br>
                                     The organization is registered to carry out its
                                     activities Tanzania Mainland with registration No. 00NGO/00006923, 3rd February 2014.
+                                    <br> -->
+                                    Rondo Women’s Development Organization, popularly known as ROWODO, is a non-profit 
+                                    organization (NGO). ROWODO is a member based organization, female headed organization 
+                                    established in 2011 and registered officially, 3rd February 2014, with a certificate 
+                                    of registration 00NGO/00006923. An organization initiated due to Gender inequalities, 
+                                    inadequate access to Economic opportunities and Reproductive Health education for Women
+                                    and Youth in Lindi region, a group of women sit at Rondo on 14th August 2013 and agreed
+                                    to establish an organization so called Rondo women’s development organization for the 
+                                    purpose of reducing afore mentioned challenges for Youth and Women in Lindi region.
+                                    <br>
+                                    ROWODO started its activities with its own resources in the community of a small remote 
+                                    village of Rondo in Lindi District.
+                                    The type of activities will be undertaken by the organization range from capacity building
+                                    to service delivery, with focus
+                                    remaining on the deprived and marginalized segments of the society. Whereas in terms of
+                                    operations what characterizes ROWODO’s 
+                                    functioning its efforts to (a) enlist involvement of the locals when initiating activities
+                                    at the grass root level; and 
+                                    (b) mobilize women for bringing peace, tolerance, and development in society. In
+                                    collaboration with likely minded organization ROWODO shall implement its activities.
+                                    <br>
+                                    ROWODO has country as well global development network, an organization advocating for
+                                    change and connecting countries to knowledge, experience and resources to assist people
+                                    build a better life. ROWODO actively participate as member in regular meeting, workshops
+                                    and seminars; exchange views and ideas, share information and best practices; observe
+                                    national and international days of action together; review priority issue and recommend
+                                    practical and realistic solution to problems  
+                                    ROWODO has a group of well-experienced, skilled and professional core staff having
+                                    training and exposure in the head office and branch offices. In addition to its skill
+                                    personnel’s a group of experts attached with ROWODO who provide necessary consultancy
+                                    including guideline, policy making etc.
+                                
                                 </span>
                                 <br>
                                 <br>
