--- a/about.html
+++ b/about.html
@@ -133,7 +133,8 @@
                                     build a better life. ROWODO actively participate as member in regular meeting, workshops
                                     and seminars; exchange views and ideas, share information and best practices; observe
                                     national and international days of action together; review priority issue and recommend
-                                    practical and realistic solution to problems  
+                                    practical and realistic solution to problems.
+                                    <br>
                                     ROWODO has a group of well-experienced, skilled and professional core staff having
                                     training and exposure in the head office and branch offices. In addition to its skill
                                     personnel’s a group of experts attached with ROWODO who provide necessary consultancy
