--- a/contact.html
+++ b/contact.html
@@ -53,10 +53,10 @@
                     <div class="collapse navbar-collapse ml-auto" id="collapsibleNavId">
                         <ul class="navbar-nav ms-auto mt-2 mt-lg-0 text-end">
                             <li class="nav-item">
-                                <a class="nav-link active" href="#">About </a>
+                                <a class="nav-link" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">Home</a>
+                                <a class="nav-link active" href="about.html">About</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="projects.html">Projects</a>
