--- a/about.html
+++ b/about.html
@@ -117,23 +117,32 @@
                                     to establish an organization so called Rondo women’s development organization for the 
                                     purpose of reducing afore mentioned challenges for Youth and Women in Lindi region.
                                     <br>
+                                    <br>
                                     ROWODO started its activities with its own resources in the community of a small remote 
                                     village of Rondo in Lindi District.
                                     The type of activities will be undertaken by the organization range from capacity building
                                     to service delivery, with focus
                                     remaining on the deprived and marginalized segments of the society. Whereas in terms of
-                                    operations what characterizes ROWODO’s 
-                                    functioning its efforts to (a) enlist involvement of the locals when initiating activities
-                                    at the grass root level; and 
-                                    (b) mobilize women for bringing peace, tolerance, and development in society. In
-                                    collaboration with likely minded organization ROWODO shall implement its activities.
-                                    <br>
+                                    operations what characterizes ROWODO’s functioning its efforts to :
+                                    <ul>
+                                        <li>
+                                            (a) enlist involvement of the locals when initiating activities
+                                            at the grass root level; and
+                                        </li>
+                                        <li>
+                                            (b) mobilize women for bringing peace, tolerance, and development in society. In
+                                            collaboration with likely minded organization ROWODO shall implement its activities.
+                                            
+                                        </li>
+                                    </ul>
+                                    
                                     ROWODO has country as well global development network, an organization advocating for
                                     change and connecting countries to knowledge, experience and resources to assist people
                                     build a better life. ROWODO actively participate as member in regular meeting, workshops
                                     and seminars; exchange views and ideas, share information and best practices; observe
                                     national and international days of action together; review priority issue and recommend
                                     practical and realistic solution to problems.
+                                    <br>
                                     <br>
                                     ROWODO has a group of well-experienced, skilled and professional core staff having
                                     training and exposure in the head office and branch offices. In addition to its skill
