--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,8 @@
                         <h4 class="section-title">Rondo Women's Development Organization</h4>
                         <span class="page-subtitle" id="small-title">
                             <i class="bi bi-envelope-fill"></i>
-                            &nbsp;> &nbsp;Contact
+                            &nbsp;> &nbsp;Contact Us
+
                         </span>
                     </div>
                 </div>
