--- a/index.html
+++ b/index.html
@@ -89,6 +89,27 @@
 
         <!-- page contents -->
         <section class="top-part pt-3 pb-4">
+            
+            <div class="container">
+                <h5 class="section-title">ROWODO Leadership</h5>
+                <div class="row">
+                    <div class="card col-md-4">
+                        <img src="./res/images/imgs/leadership/Executive Director.jpeg" alt="" width= "80%">
+                    </div>
+                    <div class="card col-md-4">
+                        <img src="./res/images/imgs/leadership/Chairperson.jpeg" alt="" width= "80%">
+                    </div>
+                    <div class="card col-md-4">
+                        <img src="./res/images/imgs/leadership/Board Chairperson.jpeg" alt="" width= "80%">
+                    </div>
+
+                    <!-- <p>
+                        <div class="">
+
+                        </div>
+                    </p> -->
+                </div>
+            </div>
 
             <div class="container">
                 <div class="row">
