--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                 <h5 class="section-title">ROWODO Leadership</h5>
                 <div class="row">
                     <div class="card col-md-4">
-                        <img src="./res/images/imgs/leadership/Executive Director.jpeg" alt="" width= "80%">
+                        <img src="./res/images/imgs/leadership/Executive Director.jpeg" alt="" width= "100%" class="p-4">
                     </div>
                     <div class="card col-md-4">
-                        <img src="./res/images/imgs/leadership/Chairperson.jpeg" alt="" width= "80%">
+                        <img src="./res/images/imgs/leadership/Chairperson.jpeg" alt="" width= "100%" >
                     </div>
                     <div class="card col-md-4">
                         <img src="./res/images/imgs/leadership/Board Chairperson.jpeg" alt="" width= "80%">
