padding more -leadership

--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
                         <img src="./res/images/imgs/leadership/Executive Director.jpeg" alt="" width= "100%" class="p-4">
                     </div>
                     <div class="card col-md-4">
-                        <img src="./res/images/imgs/leadership/Chairperson.jpeg" alt="" width= "100%" >
+                        <img src="./res/images/imgs/leadership/Chairperson.jpeg" alt="" width= "100%" class="p-5">
                     </div>
                     <div class="card col-md-4">
-                        <img src="./res/images/imgs/leadership/Board Chairperson.jpeg" alt="" width= "80%">
+                        <img src="./res/images/imgs/leadership/Board Chairperson.jpeg" alt="" width= "100%" class="p-3">
                     </div>
 
                     <!-- <p>
