--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
             <div class="container">
                 <h5 class="section-title">ROWODO Leadership</h5>
                 <div class="row">
-                    <div class="card col-md-4">
-                        <img src="./res/images/imgs/leadership/Executive Director.jpeg" alt="" width= "100%" class="p-4">
+                    <div class="col-md-4 ">
+                        <img src="./res/images/imgs/leadership/Executive Director.jpeg" alt="" width= "100%" class="">
                     </div>
-                    <div class="card col-md-4">
-                        <img src="./res/images/imgs/leadership/Chairperson.jpeg" alt="" width= "100%" class="p-5">
+                    <div class="col-md-4">
+                        <img src="./res/images/imgs/leadership/Chairperson.jpeg" alt="" width= "100%" class="">
                     </div>
-                    <div class="card col-md-4">
-                        <img src="./res/images/imgs/leadership/Board Chairperson.jpeg" alt="" width= "100%" class="p-3">
+                    <div class="col-md-4">
+                        <img src="./res/images/imgs/leadership/Board Chairperson.jpeg" alt="" width= "100%" class="">
                     </div>
 
                     <!-- <p>
