--- a/index.html
+++ b/index.html
@@ -93,14 +93,26 @@
             <div class="container">
                 <h5 class="section-title">ROWODO Leadership</h5>
                 <div class="row">
-                    <div class="col-md-4 ">
-                        <img src="./res/images/imgs/leadership/Executive Director.jpeg" alt="" width= "100%" class="">
+                    <div class="card col-md-4 w-90">
+                        <img src="./res/images/imgs/leadership/Executive Director.jpeg" alt="" width= "100%" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a short card.</p>
+                        </div>
                     </div>
-                    <div class="col-md-4">
-                        <img src="./res/images/imgs/leadership/Chairperson.jpeg" alt="" width= "100%" class="">
+                    <div class="card col-md-4 w-90">
+                        <img src="./res/images/imgs/leadership/Chairperson.jpeg" alt="" width= "100%" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a short card.</p>
+                        </div>
                     </div>
-                    <div class="col-md-4">
-                        <img src="./res/images/imgs/leadership/Board Chairperson.jpeg" alt="" width= "100%" class="">
+                    <div class="card col-md-4 w-90">
+                        <img src="./res/images/imgs/leadership/Board Chairperson.jpeg" alt="" width= "100%" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a short card.</p>
+                        </div>
                     </div>
 
                     <!-- <p>
